-m "Fix signal trades display in pairs trading strategy notebook"

--- a/build-a-pairs-trading-strategy-python-correlation_matrix-cointegration-z_score.ipynb
+++ b/build-a-pairs-trading-strategy-python-correlation_matrix-cointegration-z_score.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "id": "b4ac9956",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "id": "ff5a019d",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "id": "7f45b1d8",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "2020-01-07  72.282997  0.96850  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "2f32a62a",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "id": "790e895d",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "id": "dd32b851",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "8a360bb6",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.951\n",
       "Method:                 Least Squares   F-statistic:                 2.804e+04\n",
       "Date:                Mon, 04 Aug 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        18:59:31   Log-Likelihood:                -3457.5\n",
+      "Time:                        19:04:28   Log-Likelihood:                -3457.5\n",
       "No. Observations:                1455   AIC:                             6919.\n",
       "Df Residuals:                    1453   BIC:                             6930.\n",
       "Df Model:                           1                                         \n",
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "id": "28250056",
    "metadata": {},
    "outputs": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "id": "3a975d25",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "id": "8d506e7f",
    "metadata": {},
    "outputs": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "id": "be1ff594",
    "metadata": {},
    "outputs": [
@@ -749,7 +749,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.937\n",
       "Method:                 Least Squares   F-statistic:                 2.180e+04\n",
       "Date:                Mon, 04 Aug 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        18:59:40   Log-Likelihood:                -3035.6\n",
+      "Time:                        19:04:34   Log-Likelihood:                -3035.6\n",
       "No. Observations:                1455   AIC:                             6075.\n",
       "Df Residuals:                    1453   BIC:                             6086.\n",
       "Df Model:                           1                                         \n",
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "id": "10a549f2",
    "metadata": {},
    "outputs": [
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "id": "0a7f492c",
    "metadata": {},
    "outputs": [
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "id": "b58dfcea",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,12 @@
       "2020-02-10 -1.145312   1.0         -0.000000\n",
       "2020-02-11 -1.181167   1.0         -0.004072\n",
       "2020-02-12 -1.131599   1.0          0.005652\n",
-      "2020-02-17 -1.001003   1.0         -0.000000\n"
+      "2020-02-17 -1.001003   1.0         -0.000000\n",
+      "2020-02-18 -1.059038   1.0         -0.006484\n",
+      "2020-02-19 -1.263848   1.0         -0.023033\n",
+      "2020-02-20 -1.253901   1.0          0.001145\n",
+      "2020-02-21 -1.450254   1.0         -0.022577\n",
+      "2020-02-24 -1.545916   1.0         -0.011253\n"
      ]
     }
    ],
@@ -945,12 +950,12 @@
     "# Display first few trades\n",
     "print(\"\\nFirst 10 trading signals:\")\n",
     "signal_trades_pair2 = trades_pair2[trades_pair2.side != 0]\n",
-    "print(signal_trades_pair2[['signal', 'side', 'strategy_returns']].head())"
+    "print(signal_trades_pair2[['signal', 'side', 'strategy_returns']].head(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "id": "bbc40c2d",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1072,7 @@
        "2025-04-14          0.054408  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "id": "0feb305f",
    "metadata": {},
    "outputs": [
